fix names overlapping with actions in chat view

--- a/userstyle.css
+++ b/userstyle.css
@@ -13,6 +13,14 @@
 
 #chat li[class*='message'] { padding: 3px !important }
 
+#chat li[class*="message"] .message-author {
+  padding-left: 20px !important;
+}
+
+#chat li[class*="message"] .single-view-link {
+  padding-left:2px !important;
+}
+
 
 /* inbox */
 
